(doc) edit class names to adhere to naming convention

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
     <body class="container">
       <div class="headerRow">
-        <div class="col-md-4" class="reviewBox">Add Review</div>
-        <div class="col-md-4" class="pageTitle">HowWasIt</div>
-        <div class="col-md-4" class="searchBox">Search</div>
+        <div class="col-md-4 review-box">Add Review</div>
+        <div class="col-md-4 page-title">HowWasIt</div>
+        <div class="col-md-4 searchbox">Search</div>
       </div>
       <div class="main">
-        <div class="col-md-8" class="map">Map</div>
-        <div class="col-md-4" class="sideBar">
-          <div class="col-md-4" class="topFive">TopFive</div>
-          <div class="col-md-4" class="friends">Friends</div>
+        <div class="col-md-8 map">Map</div>
+        <div class="col-md-4 sidebar">
+          <div class="col-md-4 top-five">TopFive</div>
+          <div class="col-md-4 friends">Friends</div>
         </div>
       </div>
     </body>
