(doc) edit link and script tag paths

--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
   <html ng-app="howWasIt">
     <head>
       <meta charset="utf-8"/>
       <title>HowWasIt</title>
-      <script src="client/bower_components/jquery/dist/jquery.min.js"></script>
-      <script src="client/bower_components/angular/angular.min.js"></script>
       <link rel="stylesheet" type="text/css" href="client/styles/style.css"/>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+      <script src="bower_components/jquery/jquery.min.js"></script>
+      <script src="bower_components/angular/angular.js"></script>
+      <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+      <script src="app/app.js"></script>
     </head>
 
     <body class="container">
@@ -23,6 +25,7 @@
         </div>
       </div>
     </body>
+
   </html>
 
 
