--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
       <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
       <link rel="stylesheet" type="text/css" href="styles/style.css"/>
       <script src="bower_components/jquery/jquery.min.js"></script>
+      <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
       <script src="bower_components/angular/angular.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
       <script src="app/app.js"></script>
