(feat) add friends controller, reference in app.js, view code in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,19 @@
         <div class="col-md-8 map">Map</div>
         <div class="col-md-4 sidebar">
           <div class="col-md-4 top-five">TopFive</div>
-          <div class="col-md-4 friends">Friends</div>
+
+          <!-- Friends Module -->
+          <div class="col-md-4 friends" ng-controller="LinksController">
+            <h3>Friends</h3>
+            
+            <div class='friends-list'>
+              <div ng-repeat=''>
+              </div>
+            </div>
+
+          </div>
+
+
         </div>
       </div>
     </body>
