(feat) add removeFriend feature for friend list

--- a/client/index.html
+++ b/client/index.html
@@ -74,6 +74,7 @@
               <li ng-repeat="friend in userFriends | filter: friendsFilterForm">
                 <div class="friend-name">{{ friend.first_name }} {{ friend.last_name }}</div>
                 <div class="friend-email">{{ friend.email }}</div>
+                <button ng-click="removeFriend(friend)">Remove Friend</button>
               </li>
             </ul>
 
