(feat) add placeholder function to repopulate view object upon clicking a friend entry

--- a/client/index.html
+++ b/client/index.html
@@ -71,7 +71,7 @@
             
             <!-- Friends List -->
             <ul class="friends-list">
-              <li ng-repeat="friend in userFriends | filter: friendsFilterForm">
+              <li ng-repeat="friend in userFriends | filter: friendsFilterForm" ng-click="mapUserComments(friend)">
                 <div class="friend-name">{{ friend.first_name }} {{ friend.last_name }}</div>
                 <div class="friend-email">{{ friend.email }}</div>
                 <button ng-click="removeFriend(friend)">Remove Friend</button>
