(feat) maps API async load with angular

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,9 @@
       <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
       <script src="bower_components/angular/angular.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+      <!-- angular modules -->
       <script src="app/app.js"></script>
+      <script src="app/map/map.js"></script>
       <script src="app/friends/friends.js"></script>
     </head>
 
@@ -35,9 +37,11 @@
       </div>
       </nav>
       <div class="main">
-        <div class="col-md-8 map">Map</div>
+        <!-- Map Module -->
+        <div class="col-md-8 map" id="map-canvas" ng-controller="MapController">Map</div>
         <div class="col-md-4 sidebar">
-          <div class="col-md-4 top-five">TopFive</div>
+          <!-- TopFive Module -->
+          <div class="col-md-4 top-five" ng-controller="TopFiveController">TopFive</div>
 
           <!-- Friends Module -->
           <div class="col-md-4 friends" ng-controller="FriendsController">
