(feat) move id into sub-div for searchbox consideration

--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,9 @@
       </nav>
       <div class="main">
         <!-- Map Module -->
-        <div class="col-md-8 map" id="map-canvas" ng-controller="MapController">Map</div>
+        <div class="col-md-8 map" ng-controller="MapController">
+          <div id="map-canvas"></div>
+        </div>
         <div class="col-md-4 sidebar">
           <!-- TopFive Module -->
           <div class="col-md-4 top-five" ng-controller="TopFiveController">TopFive</div>
