(feat) add signup controller and view

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
       <script src="app/home/topfive/topfive.js"></script>
       <script src="app/home/friends/friends.js"></script>
       <script src="app/login/login.js"></script>
+      <script src="app/signup/signup.js"></script>
 
     </head>
 
