--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -9,6 +9,15 @@
       <label>Password:</label>
       <input type="text" name="password" ng-model="passwordInput">
 
+      <label>First Name:</label>
+      <input type="text" name="firstName" ng-model="firstNameInput">
+
+      <label>Last Name:</label>
+      <input type="text" name="lastName" ng-model="lastNameInput">
+
+      <label>Email Address:</label>
+      <input type="text" name="email" ng-model="emailInput">
+
       <input type="submit" name="friendsFilter" ng-model="loginSubmit" ng-click="createNewUser()">
     </form>
   </div>
