(feat) add server routes for login handling

--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -9,7 +9,7 @@
       <label>Password:</label>
       <input type="text" name="password" ng-model="passwordInput">
 
-      <input type="submit" name="friendsFilter" ng-model="loginSubmit" ng-click="goToHome()">
+      <input type="submit" name="friendsFilter" ng-model="loginSubmit" ng-click="loginUser()">
     </form>
   </div>
 
