--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
       <script src="app/home/friends/friends.js"></script>
       <script src="app/login/login.js"></script>
       <script src="app/signup/signup.js"></script>
+      <script src="app/services/services.js"></script>
 
     </head>
 
