--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
 
     <body class="container">
 
-      <nav class=" navbar navbar-default">
+<!--       <nav class=" navbar navbar-default">
         <div class="navbar-header">
           <div class="col-md-4" class="reviewBox" class="dropdown">
             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Add Review
@@ -43,7 +43,7 @@
                 <button type="submit" class="btn btn-default">Submit</button>
               </form>
         </div>
-      </nav>
+      </nav> -->
 
       <div ui-view></div>
 
