--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -34,6 +34,9 @@
 
 
           </li>
+          <li>
+            <a class="logout" ng-href="logout()">Log out</a>
+          </li>
         </ul>
       </div>
     </nav>
