(feat) logout link removes token from memory

--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -35,7 +35,7 @@
 
           </li>
           <li>
-            <a class="logout" ng-href="logout()">Log out</a>
+            <a class="logout" href ng-click="logout()">Log out</a>
           </li>
         </ul>
       </div>
