--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
       <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
       <script src="bower_components/angular/angular.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+      <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 
       <!-- angular modules -->
       <script src="app/app.js"></script>
