--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -35,6 +35,7 @@
 
           </li>
           <li>
+            <div>Welcome, {{ loggedInUser }}!</div>
             <a class="logout" href ng-click="logout()">Log out</a>
           </li>
         </ul>
