--- a/client/index.html
+++ b/client/index.html
@@ -23,31 +23,11 @@
 
     </head>
 
-    <body class="container">
-
-<!--       <nav class=" navbar navbar-default">
-        <div class="navbar-header">
-          <div class="col-md-4" class="reviewBox" class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Add Review
-              <span class="caret"></span>
-            </button>
-            <form class="dropdown-menu">
-              Location: <input type="text" name="location"><br>
-              Review: <input type="text" name="review"><br>
-              <input type="submit" value="Submit">
-            </form>
-
-            <div class="col-md-4" class="page-title">HowWasIt</div>
-            <div class="search-box">
-              <form class="navbar-form navbar-left" role="search">
-                <input type="text" class="form-control" placeholder="Search">
-                <button type="submit" class="btn btn-default">Submit</button>
-              </form>
-        </div>
-      </nav> -->
+    <body class="container" ng-controller="ApiLoadController">
+      
 
       <div ui-view></div>
-
+      <div id='map-canvas'></div>
     </body>
 
   </html>
