(fix) fix refresh page crash with sync API load, fix friend remove with var name correction, obtain userId from HomeController

--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -34,6 +34,9 @@
         </ul>
       </div>
     </nav>
+    
+    <div id='map-canvas'></div>
+
   </div>
 
   <!-- Sidebar to hold friends and top five -->
