--- a/client/index.html
+++ b/client/index.html
@@ -21,13 +21,17 @@
       <script src="app/signup/signup.js"></script>
       <script src="app/services/services.js"></script>
 
+      <!-- google maps API -->
+      <script src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false?v=3.exp&signed_in=true"></script>
+
+
     </head>
 
-    <body class="container" ng-controller="ApiLoadController">
+    <!-- <body class="container" ng-controller="ApiLoadController"> -->
+    <body class="container">
       
 
       <div ui-view></div>
-      <div id='map-canvas'></div>
     </body>
 
   </html>
