(feat) add login link from signup view

--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -20,6 +20,8 @@
 
       <input type="submit" name="friendsFilter" ng-model="loginSubmit" ng-click="createNewUser()">
     </form>
+
+    <a href="#/login">Existing user? Log in here</a>
   </div>
 
 
