--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -6,7 +6,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">HowWasIt</a>
+          <a class="navbar-brand">HowWasIt</a>
         </div>
         <ul class="nav navbar-nav">
           <li class="dropdown">
