--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -1,6 +1,6 @@
 <div class="main" ng-controller="LoginController">
   <!-- Map Module -->
-  <div class="col-md-4"> 
+  <div> 
     <h4>Login</h4>
     <form>
       <label>Username:</label>
