(feat) add ng-show messaging for failed login

--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -11,6 +11,7 @@
 
       <input type="submit" name="friendsFilter" ng-model="loginSubmit" ng-click="loginUser()">
     </form>
+    <div ng-show="failed">Wrong Username or Password. Try Again</div>
     <a href='#/signup'>New User? Sign up here</a>
   </div>
 
