--- a/client/app/signup/signup.html
+++ b/client/app/signup/signup.html
@@ -20,7 +20,7 @@
 
       <input type="submit" name="friendsFilter" ng-model="loginSubmit" ng-click="createNewUser()">
     </form>
-
+    <div></div>
     <a href="#/login">Existing user? Log in here</a>
   </div>
 
