--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -25,6 +25,15 @@
                   <button type='submit'>Submit</button>
                 </form>
             </div>
+          </li>
+
+<!--           <li>Location: 
+           <input type="text" name="location" id = "search-box" required>
+         </li>
+
+          <li ng-show="readyToReview">
+               Review
+          </li> -->
         </ul>
 
         <ul class ="nav navbar-nav navbar-right">
