--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -91,8 +91,8 @@
       <h3> My Friends</h3>
       <ul class="friends-list">
         <!-- <h4>Friends List</h4> -->
-        <li ng-repeat="friend in userFriends | filter: friendsFilterForm">
-          <div class="friend-name" ng-click="addFriendReviews(friend)">{{ friend.first_name }} {{ friend.last_name }}</div>
+        <li class="friend-point"ng-repeat="friend in userFriends | filter: friendsFilterForm">
+          <div class="friend-name" ng-click="addFriendReviews(friend)">{{ friend.first_name }}</div>
           <button ng-click="removeFriend(friend)">Remove Friend</button>
         </li>
       </ul>
